--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Homework. Learning the basics of HTML for beginners" />
+    <meta
+      name="description"
+      content="Homework. Learning the basics of HTML for beginners"
+    />
     <title>Studio</title>
     <!-- export google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <!-- add styles -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -16,26 +22,50 @@
     <!-- HEADER -->
     <header class="page-header">
       <nav class="page-navigation">
-        <a class="logo link" href="./index.html" rel="noopener noreferrer">Web<span class="header-logo-span">Studio</span></a>
+        <a class="logo link" href="./index.html" rel="noopener noreferrer"
+          >Web<span class="header-logo-span">Studio</span></a
+        >
         <ul class="menu list">
           <li class="menu-item">
-            <a class="menu-link link" href="./index.html" rel="noopener noreferrer">Studio</a>
+            <a
+              class="menu-link link"
+              href="./index.html"
+              rel="noopener noreferrer"
+              >Studio</a
+            >
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="./portfolio.html" rel="noopener noreferrer">Portfolio</a>
+            <a
+              class="menu-link link"
+              href="./portfolio.html"
+              rel="noopener noreferrer"
+              >Portfolio</a
+            >
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="" rel="noopener noreferrer">Contacts</a>
+            <a class="menu-link link" href="" rel="noopener noreferrer"
+              >Contacts</a
+            >
           </li>
         </ul>
       </nav>
       <address class="header-page-address">
         <ul class="address-list list">
           <li class="address-list-item">
-            <a class="address-list-link link" href="mailto:info@devstudio.com" rel="noopener noreferrer">info@devstudio.com</a>
+            <a
+              class="address-list-link link"
+              href="mailto:info@devstudio.com"
+              rel="noopener noreferrer"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="address-list-item">
-            <a class="address-list-link link" href="tel:+110001111111" rel="noopener noreferrer">+11 (000) 111-11-11</a>
+            <a
+              class="address-list-link link"
+              href="tel:+110001111111"
+              rel="noopener noreferrer"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -55,19 +85,31 @@
         <ul class="features-list list">
           <li class="features-list-item">
             <h3 class="features-item-header">Strategy</h3>
-            <p class="features-item-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            <p class="features-item-text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
           </li>
           <li class="features-list-item">
             <h3 class="features-item-header">Punctuality</h3>
-            <p class="features-item-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            <p class="features-item-text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
           </li>
           <li class="features-list-item">
             <h3 class="features-item-header">Diligence</h3>
-            <p class="features-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <p class="features-item-text">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
           </li>
           <li class="features-list-item">
             <h3 class="features-item-header">Technologies</h3>
-            <p class="features-item-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            <p class="features-item-text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
           </li>
         </ul>
       </section>
@@ -78,13 +120,31 @@
 
         <ul class="services-list list">
           <li class="services-item">
-            <img src="./images/1.services/img1.jpg" alt="desktop app" width="360" height="300" class="services-item-img" />
+            <img
+              src="./images/1.services/img1.jpg"
+              alt="desktop app"
+              width="360"
+              height="300"
+              class="services-item-img"
+            />
           </li>
           <li class="services-item">
-            <img src="./images/1.services/img2.jpg" alt="mobile app" width="360" height="300" class="services-item-img" />
+            <img
+              src="./images/1.services/img2.jpg"
+              alt="mobile app"
+              width="360"
+              height="300"
+              class="services-item-img"
+            />
           </li>
           <li class="services-item">
-            <img src="./images/1.services/img3.jpg" alt="webdesign" width="360" height="300" class="services-item-img" />
+            <img
+              src="./images/1.services/img3.jpg"
+              alt="webdesign"
+              width="360"
+              height="300"
+              class="services-item-img"
+            />
           </li>
         </ul>
       </section>
@@ -94,22 +154,46 @@
         <h2 class="team-header">Our Team</h2>
         <ul class="team-list list">
           <li class="team-item">
-            <img class="team-item-img" src="./images/2.team/img1-product-designer.jpg" alt="photo of the product designer" width="264" height="260" />
+            <img
+              class="team-item-img"
+              src="./images/2.team/img1-product-designer.jpg"
+              alt="photo of the product designer"
+              width="264"
+              height="260"
+            />
             <h3 class="team-item-header">Mark Guerrero</h3>
             <p class="team-item-text">Product Designer</p>
           </li>
           <li class="team-item">
-            <img class="team-item-img" src="./images/2.team/img2-frontend-developer.jpg" alt="photo of the frontend developer" width="264" height="260" />
+            <img
+              class="team-item-img"
+              src="./images/2.team/img2-frontend-developer.jpg"
+              alt="photo of the frontend developer"
+              width="264"
+              height="260"
+            />
             <h3 class="team-item-header">Tom Ford</h3>
             <p class="team-item-text">Frontend Developer</p>
           </li>
           <li class="team-item">
-            <img class="team-item-img" src="./images/2.team/img3-marketing.jpg" alt="photo of the marketing specialist" width="264" height="260" />
+            <img
+              class="team-item-img"
+              src="./images/2.team/img3-marketing.jpg"
+              alt="photo of the marketing specialist"
+              width="264"
+              height="260"
+            />
             <h3 class="team-item-header">Camila Garcia</h3>
             <p class="team-item-text">Marketing</p>
           </li>
           <li class="team-item">
-            <img class="team-item-img" src="./images/2.team/img4-ui-designer.jpg" alt="photo of the ui designer" width="264" height="260" />
+            <img
+              class="team-item-img"
+              src="./images/2.team/img4-ui-designer.jpg"
+              alt="photo of the ui designer"
+              width="264"
+              height="260"
+            />
             <h3 class="team-item-header">Daniel Wilson</h3>
             <p class="team-item-text">UI Designer</p>
           </li>
@@ -118,11 +202,15 @@
     </main>
     <!-- /TEAM -->
     <!-- /MAIN -->
-
     <!-- FOOTER -->
     <footer class="footer">
-      <a class="logo link" href="./index.html" rel="noopener noreferrer">Web<span class="footer-logo-span">Studio</span></a>
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <a class="logo link" href="./index.html" rel="noopener noreferrer"
+        >Web<span class="footer-logo-span">Studio</span></a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
     <!-- /FOOTER -->
   </body>
