--- a/portfolio.html
+++ b/portfolio.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Homework. Learning the basics of HTML for beginners" />
+    <meta
+      name="description"
+      content="Homework. Learning the basics of HTML for beginners"
+    />
     <title>Portfolio</title>
     <!-- export google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <!-- add styles -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -16,26 +22,50 @@
     <!-- HEADER -->
     <header class="page-header">
       <nav class="page-navigation">
-        <a class="logo link" href="./index.html" rel="noopener noreferrer">Web<span class="header-logo-span">Studio</span></a>
+        <a class="logo link" href="./index.html" rel="noopener noreferrer"
+          >Web<span class="header-logo-span">Studio</span></a
+        >
         <ul class="menu list">
           <li class="menu-item">
-            <a class="menu-link link" href="./index.html" rel="noopener noreferrer">Studio</a>
+            <a
+              class="menu-link link"
+              href="./index.html"
+              rel="noopener noreferrer"
+              >Studio</a
+            >
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="./portfolio.html" rel="noopener noreferrer">Portfolio</a>
+            <a
+              class="menu-link link"
+              href="./portfolio.html"
+              rel="noopener noreferrer"
+              >Portfolio</a
+            >
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="" rel="noopener noreferrer">Contacts</a>
+            <a class="menu-link link" href="" rel="noopener noreferrer"
+              >Contacts</a
+            >
           </li>
         </ul>
       </nav>
       <address class="header-page-address">
         <ul class="address-list list">
           <li class="address-list-item">
-            <a class="address-list-link link" href="mailto:info@devstudio.com" rel="noopener noreferrer">info@devstudio.com</a>
+            <a
+              class="address-list-link link"
+              href="mailto:info@devstudio.com"
+              rel="noopener noreferrer"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="address-list-item">
-            <a class="address-list-link link" href="tel:+110001111111" rel="noopener noreferrer">+11 (000) 111-11-11</a>
+            <a
+              class="address-list-link link"
+              href="tel:+110001111111"
+              rel="noopener noreferrer"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -62,70 +92,128 @@
             <button class="portfolio-filter-btn" type="button">Design</button>
           </li>
           <li class="portfolio-filter">
-            <button class="portfolio-filter-btn" type="button">Marketing</button>
+            <button class="portfolio-filter-btn" type="button">
+              Marketing
+            </button>
           </li>
         </ul>
         <!-- Portfolio cards -->
         <ul class="portfolio-list list">
           <li class="portfolio-list-item">
             <a href="" class="portfolio-card link">
-              <img src="./images/3.portfolio/img-1-bank-app.jpg" alt="bank app" width="360" height="300" class="portfolio-card-img" />
-              <h2 class="portfolio-card-header">Banking App Interface Concept</h2>
+              <img
+                src="./images/3_portfolio/img-1-bank-app.jpg"
+                alt="bank app"
+                width="360"
+                height="300"
+                class="portfolio-card-img"
+              />
+              <h2 class="portfolio-card-header">
+                Banking App Interface Concept
+              </h2>
               <p class="portfolio-card-text">App</p>
             </a>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-card link">
-              <img src="./images/3.portfolio/img-2-cashless-payment.jpg" alt="appication for cashless payment" width="360" height="300" class="portfolio-card-img" />
+              <img
+                src="./images/3_portfolio/img-2-cashless-payment.jpg"
+                alt="appication for cashless payment"
+                width="360"
+                height="300"
+                class="portfolio-card-img"
+              />
               <h2 class="portfolio-card-header">Cashless Payment</h2>
               <p class="portfolio-card-text">Marketing</p>
             </a>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-card link">
-              <img src="./images/3.portfolio/img-3-meditation-app.jpg" alt="meditation app" width="360" height="300" class="portfolio-card-img" />
+              <img
+                src="./images/3_portfolio/img-3-meditation-app.jpg"
+                alt="meditation app"
+                width="360"
+                height="300"
+                class="portfolio-card-img"
+              />
               <h2 class="portfolio-card-header">Meditation App</h2>
               <p class="portfolio-card-text">App</p>
             </a>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-card link">
-              <img src="./images/3.portfolio/img-4-taxi-app.jpg" alt="taxi app" width="360" height="300" class="portfolio-card-img" />
+              <img
+                src="./images/3_portfolio/img-4-taxi-app.jpg"
+                alt="taxi app"
+                width="360"
+                height="300"
+                class="portfolio-card-img"
+              />
               <h2 class="portfolio-card-header">Taxi Service</h2>
               <p class="portfolio-card-text">Marketing</p>
             </a>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-card link">
-              <img src="./images/3.portfolio/img-5-wallpaper.jpg" alt="wallpapers" width="360" height="300" class="portfolio-card-img" />
+              <img
+                src="./images/3_portfolio/img-5-wallpaper.jpg"
+                alt="wallpapers"
+                width="360"
+                height="300"
+                class="portfolio-card-img"
+              />
               <h2 class="portfolio-card-header">Screen Illustrations</h2>
               <p class="portfolio-card-text">Design</p>
             </a>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-card link">
-              <img src="./images/3.portfolio/img-6-online-courses.jpg" alt="online courses" width="360" height="300" class="portfolio-card-img" />
+              <img
+                src="./images/3_portfolio/img-6-online-courses.jpg"
+                alt="online courses"
+                width="360"
+                height="300"
+                class="portfolio-card-img"
+              />
               <h2 class="portfolio-card-header">Online Courses</h2>
               <p class="portfolio-card-text">Marketing</p>
             </a>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-card link">
-              <img src="./images/3.portfolio/img-7-instagram-stories.jpg" alt="instagram stories" width="360" height="300" class="portfolio-card-img" />
+              <img
+                src="./images/3_portfolio/img-7-instagram-stories.jpg"
+                alt="instagram stories"
+                width="360"
+                height="300"
+                class="portfolio-card-img"
+              />
               <h2 class="portfolio-card-header">Instagram Stories Concept</h2>
               <p class="portfolio-card-text">Design</p>
             </a>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-card link">
-              <img src="./images/3.portfolio/img-8-website-food.jpg" alt="website organik food" width="360" height="300" class="portfolio-card-img" />
+              <img
+                src="./images/3_portfolio/img-8-website-food.jpg"
+                alt="website organik food"
+                width="360"
+                height="300"
+                class="portfolio-card-img"
+              />
               <h2 class="portfolio-card-header">Organic Food</h2>
               <p class="portfolio-card-text">Web Site</p>
             </a>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-card link">
-              <img src="./images/3.portfolio/img-9-website-coffee.jpg" alt="website coffee" width="360" height="300" class="portfolio-card-img" />
+              <img
+                src="./images/3_portfolio/img-9-website-coffee.jpg"
+                alt="website coffee"
+                width="360"
+                height="300"
+                class="portfolio-card-img"
+              />
               <h2 class="portfolio-card-header">Fresh Coffee</h2>
               <p class="portfolio-card-text">Web Site</p>
             </a>
@@ -138,8 +226,13 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-      <a class="logo link" href="./index.html" rel="noopener noreferrer">Web<span class="footer-logo-span">Studio</span></a>
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <a class="logo link" href="./index.html" rel="noopener noreferrer"
+        >Web<span class="footer-logo-span">Studio</span></a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
 
     <!-- /FOOTER -->
